sync by dataset instead of project

--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -167,7 +167,7 @@
                 </label>
                 <label class="item item-input">
                   <span class="input-label">ID</span>
-                  <input type="text" disabled ng-model="spot.properties.id">
+                  <input type="number" disabled ng-model="spot.properties.id">
                 </label>
                 <label class="item item-input">
                   <span class="input-label">Date</span>
