--- a/www/templates/archiveTiles.html
+++ b/www/templates/archiveTiles.html
@@ -6,6 +6,10 @@
       <input type="text" ng-model="map.name" autofocus>
     </label>
 
+    <ion-checkbox ng-model="map.downloadMacrostrat">
+      Download Macrostrat-Geologic tiles too?
+    </ion-checkbox>
+
     <ion-checkbox ng-model="map.downloadZooms" ng-show="showDownload" ng-change="onChangeDownloadZooms()">
       Download inner zooms?
     </ion-checkbox>
@@ -20,9 +24,11 @@
     *Offline Maps are loaded automatically when offline. Edit and delete options for Saved Maps will be available under the Offline Maps menu item.
 
     <div ng-show="map.showProgressBar">
-      <br><br>
       Downloading basemap tiles:
       <progress ng-value="map.percentDownload" max="100"></progress>
+    </div>
+
+    <div ng-show="map.showOverlayProgressBar">
       Downloading geologic map overlay tiles:
       <progress ng-value="map.overLayPercentDownload" max="100"></progress>
     </div>
