restrict macrostrat download between zooms 4-12

--- a/www/templates/archiveTiles.html
+++ b/www/templates/archiveTiles.html
@@ -6,7 +6,7 @@
       <input type="text" ng-model="map.name" autofocus>
     </label>
 
-    <ion-checkbox ng-model="map.downloadMacrostrat">
+    <ion-checkbox ng-model="map.downloadMacrostrat" ng-show="map.showDownloadMacrostrat">
       Download Macrostrat-Geologic tiles too?
     </ion-checkbox>
 
