--- a/www/css/style.css
+++ b/www/css/style.css
@@ -194,6 +194,7 @@ Image Modal Style: used for image active-slider when choosing spot images
 /*--------------------
 Input Fields Style
 --------------------*/
+
 .item {
   white-space: normal;
 }
@@ -211,6 +212,10 @@ Input Fields Style
 }
 .formCheckboxes {
   white-space: nowrap;
+}
+
+.input-label {
+  width: 100%;
 }
 
 /*--------------------
