--- a/www/templates/sync.html
+++ b/www/templates/sync.html
@@ -24,7 +24,7 @@
           </div>
 
           <!-- List Current Datasets -->
-          <label class="item item-input item-select">
+          <label class="item item-input item-select item-stacked-label item-text-wrap">
             <div class="input-label">
               Select a Dataset
             </div>
@@ -52,7 +52,7 @@
           Create a New Dataset
         </div>
         <div class="item item-input-inset">
-          <label class="item-input-wrapper">
+          <label class="item-input-wrapper item-stacked-label item-text-wrap">
             <span class="input-label">Dataset Name:</span>
             <input type="text"
                    ng-model="dataset_name">
