--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -12,7 +12,7 @@
       ---------------->
       <ion-tab title="1. Detail">
         <ion-nav-view name="detail-tab">
-          <ion-content class="padding">
+          <ion-content>
             <div ng-show="showDynamicFields">
               <div class="item item-divider">
                 {{ spot.properties.type }}
@@ -21,51 +21,48 @@
                 <div id="{{ field.name }}" ng-show="showField(field.relevant)">
                   <div data-ng-switch on="field.type.split(' ')[0]">
                     <div ng-switch-when="integer">
-                      <label class="item item-input"
+                      <label class="item item-input item-stacked-label item-text-wrap"
                              ng-class="{ 'has-errors' : straboForm[field.name].$invalid, 'no-errors' : straboForm[field.name].$valid }"
                              ng-messages-include="templates/error-messages.html">
-                        <span class="input-label">{{field.label}}:</span>
+                        <span class="input-label">{{field.label}}</span>
                         <input type="number"
                                name="{{ field.name }}"
                                placeholder="{{ field.hint }}"
                                ng-model="spot.properties[field.name]"
                                ng-required="{{ field.required }}"
                                ng-min="getMin(field.constraint)"
-                               ng-max="getMax(field.constraint)"
-                               class="fieldsRight">
+                               ng-max="getMax(field.constraint)">
                       </label>
                     </div>
                     <div ng-switch-when="text">
-                      <label class="item item-input"
+                      <label class="item item-input item-stacked-label item-text-wrap"
                              ng-class="{ 'has-errors' : straboForm[field.name].$invalid, 'no-errors' : straboForm[field.name].$valid }"
                              ng-messages-include="templates/error-messages.html">
-                        <span class="input-label">{{field.label}}:</span>
+                        <span class="input-label">{{field.label}}</span>
                         <input type="text"
                                name="{{ field.name }}"
                                placeholder="{{ field.hint }}"
                                ng-model="spot.properties[field.name]"
-                               ng-required="{{ field.required }}"
-                               class="fieldsRight">
+                               ng-required="{{ field.required }}">
                       </label>
                     </div>
                     <div ng-switch-when="note">
-                      <label class="item item-input"
+                      <label class="item item-input item-stacked-label item-text-wrap"
                              ng-class="{ 'has-errors' : straboForm[field.name].$invalid, 'no-errors' : straboForm[field.name].$valid }"
                              ng-messages-include="templates/error-messages.html">
-                        <span class="input-label">{{ field.label }}:</span>
+                        <span class="input-label">{{ field.label }}</span>
                         <textarea name="{{ field.name }}"
                                   rows="4"
                                   placeholder="{{field.hint}}"
                                   ng-model="spot.properties[field.name]"
-                                  ng-required="{{ field.required }}"
-                                  class="fieldsRight">
+                                  ng-required="{{ field.required }}">
                         </textarea>
                       </label>
                     </div>
                     <div ng-switch-when="select_one">
-                      <label class="item item-input item-select"
+                      <label class="item item-input item-select item-stacked-label item-text-wrap"
                              ng-class="{ 'has-errors' : straboForm[field.name].$invalid, 'no-errors' : straboForm[field.name].$valid }">
-                        <span class="input-label">{{ field.label }}:</span>
+                        <span class="input-label">{{ field.label }}</span>
                         <select name="{{ field.name }}"
                                 ng-model="spot.properties[field.name]"
                                 ng-options="choice.name as choice.label for choice in choices
@@ -76,8 +73,8 @@
                       </label>
                     </div>
                     <div ng-switch-when="select_multiple">
-                      <label class="item formCheckboxes" ng-class="setSelMultClass(field)">
-                        <span class="input-label">{{field.label}}:</span>
+                      <label class="item item-stacked-label item-text-wrap" ng-class="setSelMultClass(field)">
+                        <span class="input-label">{{field.label}}</span>
                         <ion-checkbox name="{{ field.name }}"
                                       ng-repeat="choice in choices | orderBy: 'label' | filter: { 'list name': field.type.split(' ')[1] }"
                                       ng-checked="isOptionChecked(field.name, choice.name)"
@@ -108,38 +105,38 @@
 
             <div class="row responsive-sm">
               <div class="col" ng-show="showContactButtons()">
-                <button ng-click="newSpot('Contact');" class="button button-block icon-left icon ion-compass">Link to New Contact Description</button>
+                <button ng-click="newSpot('Contact');" class="button button-block button-positive icon-left icon ion-compass">Link to New Contact Description</button>
               </div>
               <div class="col" ng-show="showContactButtons()">
-                <button ng-click="linkContact();" ng-disabled="enableLinkContact" class="button button-block icon-left icon ion-compass">Link to Existing Contact Description</button>
+                <button ng-click="linkContact();" ng-disabled="enableLinkContact" class="button button-block button-positive icon-left icon ion-compass">Link to Existing Contact Description</button>
               </div>
 
               <div class="col" ng-show="showFaultButtons()">
-                <button ng-click="newSpot('Fault');" class="button button-block icon-left icon ion-compass">Link to New Fault Description</button>
+                <button ng-click="newSpot('Fault');" class="button button-block button-positive icon-left icon ion-compass">Link to New Fault Description</button>
               </div>
               <div class="col" ng-show="showFaultButtons()">
-                <button ng-click="linkFault();" ng-disabled="enableLinkFault" class="button button-block icon-left icon ion-compass">Link to Existing Fault Description</button>
+                <button ng-click="linkFault();" ng-disabled="enableLinkFault" class="button button-block button-positive icon-left icon ion-compass">Link to Existing Fault Description</button>
               </div>
 
               <div class="col" ng-show="showFoldButtons()">
-                <button ng-click="newSpot('Fold');" class="button button-block icon-left icon ion-compass">Link to New Fold Description</button>
+                <button ng-click="newSpot('Fold');" class="button button-block button-positive icon-left icon ion-compass">Link to New Fold Description</button>
               </div>
               <div class="col" ng-show="showFoldButtons()">
-                <button ng-click="linkFold();" ng-disabled="enableLinkFold" class="button button-block icon-left icon ion-compass">Link to Existing Fold Description</button>
+                <button ng-click="linkFold();" ng-disabled="enableLinkFold" class="button button-block button-positive button-positive icon-left icon ion-compass">Link to Existing Fold Description</button>
               </div>
 
               <div class="col" ng-show="showOrientationButtons">
-                <button ng-click="newSpot('Orientation');" class="button button-block icon-left icon ion-compass">Link to New Orientation</button>
+                <button ng-click="newSpot('Orientation');" class="button button-block button-positive icon-left icon ion-compass">Link to New Orientation</button>
               </div>
               <div class="col" ng-show="showOrientationButtons">
-                <button ng-click="linkOrientation();" ng-disabled="enableLinkOrientation" class="button button-block icon-left icon ion-compass">Link to Existing Orientation</button>
+                <button ng-click="linkOrientation();" ng-disabled="enableLinkOrientation" class="button button-block button-positive icon-left icon ion-compass">Link to Existing Orientation</button>
               </div>
 
               <div class="col" ng-show="showShearZoneButtons()">
-                <button ng-click="newSpot('Shear Zone');" class="button button-block icon-left icon ion-compass">Link to New Shear Zone Description</button>
+                <button ng-click="newSpot('Shear Zone');" class="button button-block button-positive icon-left icon ion-compass">Link to New Shear Zone Description</button>
               </div>
               <div class="col" ng-show="showShearZoneButtons()">
-                <button ng-click="linkShearZone();" ng-disabled="enableLinkShearZone" class="button button-block icon-left icon ion-compass">Link to Existing Shear Zone Description</button>
+                <button ng-click="linkShearZone();" ng-disabled="enableLinkShearZone" class="button button-block button-positive icon-left icon ion-compass">Link to Existing Shear Zone Description</button>
               </div>
             </div>
 
@@ -148,7 +145,7 @@
                 Group Members
               </div>
               <div>
-                <button ng-click="addGroupMember();" class="button button-block icon-left icon ion-plus-round">Add or Edit Members of this Group</button>
+                <button ng-click="addGroupMember();" class="button button-block button-positive icon-left icon ion-plus-round">Add or Edit Members of this Group</button>
               </div>
               <ion-list>
                 <ion-item ng-repeat="item in group_members_selected" href="#/app/spots/{{item.id}}">
@@ -165,58 +162,57 @@
       ---------------->
       <ion-tab title="2. General">
         <ion-nav-view name="general-tab">
-          <ion-content class="padding">
-            <div class="row responsive-md">
-              <div class="col">
+          <ion-content>
                 <div class="item item-divider">
                   {{spot.properties.type}}
                 </div>
-                <label class="item item-input">
+                <label class="item item-input item-stacked-label item-text-wrap">
                   <span class="input-label">Spot Name</span>
-                  <input type="text" placeholder="Name this Spot" ng-model="spot.properties.name" autofocus>
+                  <input type="text" placeholder="Name this Spot" ng-model="spot.properties.name">
                 </label>
-                <label class="item item-input">
+                <label class="item item-input item-stacked-label item-text-wrap">
                   <span class="input-label">ID</span>
                   <input type="number" disabled ng-model="spot.properties.id">
                 </label>
-                <label class="item item-input">
+                <label class="item item-input item-stacked-label item-text-wrap">
                   <span class="input-label">Date</span>
                   <input type="date" ng-model="spot.properties.date">
                 </label>
-                <label class="item item-input">
+                <label class="item item-input item-stacked-label item-text-wrap">
                   <span class="input-label">Time</span>
                   <input type="time" ng-model="spot.properties.time">
                 </label>
-              </div>
 
               <!-- Location -->
-              <div class="col">
                 <div class="item item-divider">
                   Map Representation
                 </div>
-                <label class="item item-input">
+                <label class="item item-input item-stacked-label item-text-wrap">
                   <span class="input-label">Geometry</span>
                   <input type="text" disabled ng-model="spot.geometry.type">
                 </label>
-                <label class="item item-input" ng-show="showLatLng">
+                <label class="item item-input item-stacked-label item-text-wrap" ng-show="showLatLng">
                   <span class="input-label">Latitude</span>
                   <input type="number" ng-model="point.latitude" value={{point.latitude}}>
                 </label>
-                <label class="item item-input" ng-show="showLatLng">
+                <label class="item item-input item-stacked-label item-text-wrap" ng-show="showLatLng">
                   <span class="input-label">Longitude</span>
                   <input type="number" ng-model="point.longitude" value={{point.longitude}}>
                 </label>
                 <div>
                   <!-- Map Interaction -->
-                  <div>
-                    <br>
-                    <button ng-click="goToSpot();" ng-hide="hideViewOnMapButton" class="button button-small icon-left icon ion-eye">View on Map</button>
-                    <button ng-click="getLocation();" ng-show="showMyLocationButton" class="button button-small icon-left ion-pinpoint">Set to My Location</button>
-                    <button ng-click="openMap();" ng-hide="hideSetFromMapButton" class="button button-small icon-left icon ion-map">Set From Map</button>
+                  <div class="row responsive-sm">
+                    <div class="col">
+                      <button ng-click="goToSpot();" ng-hide="hideViewOnMapButton" class="button button-block button-positive icon-left icon ion-eye">View on Map</button>
+                    </div>
+                    <div class="col">
+                      <button ng-click="getLocation();" ng-show="showMyLocationButton" class="button button-block button-positive icon-left ion-pinpoint">Set to My Location</button>
+                    </div>
+                    <div class="col">
+                      <button ng-click="openMap();" ng-hide="hideSetFromMapButton" class="button button-block button-positive icon-left icon ion-map">Set From Map</button>
+                    </div>
                   </div>
                 </div>
-              </div>
-            </div>
 
             <!-- Images -->
             <div class="item item-divider">
@@ -231,13 +227,14 @@
                 </ul>
               </div>
             </div>
-            <button ng-click="cameraModal()" class="button button-small icon-left ion-camera">Add Photo</button>
-            <br><br>
+            <div>
+              <button ng-click="cameraModal()" class="button button-block button-positive icon-left ion-camera">Add Photo</button>
+            </div>
             <div class="item item-divider">
               Notes
             </div>
             <label class="item item-input">
-              <textarea placeholder="Notes about this Spot" rows="4" ng-model="spot.properties.notes"></textarea>
+              <textarea placeholder="Notes about this Spot" rows="8" ng-model="spot.properties.notes"></textarea>
             </label>
           </ion-content>
         </ion-nav-view>
@@ -248,14 +245,14 @@
       ---------------->
       <ion-tab title="3. Connections">
         <ion-nav-view name="connections-tab">
-          <ion-content class="padding">
+          <ion-content>
             <!-- Linked Spots -->
             <div ng-show="showLinks">
               <div class="item item-divider">
                 Links
               </div>
               <div>
-                <button ng-click="linkSpot();" class="button button-block icon-left icon ion-link">Add or Edit Links to Other Spots</button>
+                <button ng-click="linkSpot();" class="button button-block button-positive icon-left icon ion-link">Add or Edit Links to Other Spots</button>
               </div>
               <ion-list>
                 <ion-item ng-repeat="item in links_selected">
@@ -276,7 +273,7 @@
                 Groups
               </div>
               <div>
-                <button ng-click="linkGroup();" class="button button-block icon-left icon ion-plus-round">Add or Edit Membership in Groups</button>
+                <button ng-click="linkGroup();" class="button button-block button-positive icon-left icon ion-plus-round">Add or Edit Membership in Groups</button>
               </div>
               <ion-list>
                 <ion-item ng-repeat="item in groups_selected" href="#/app/spots/{{item.id}}">
