--- a/www/templates/sync.html
+++ b/www/templates/sync.html
@@ -53,7 +53,7 @@
         </div>
         <div class="item item-input-inset">
           <label class="item-input-wrapper item-stacked-label item-text-wrap">
-            <span class="input-label">Dataset Name:</span>
+            <span class="input-label">Dataset Name</span>
             <input type="text"
                    ng-model="dataset_name">
           </label>
