--- a/www/templates/spots.html
+++ b/www/templates/spots.html
@@ -3,6 +3,9 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
 	<ion-nav-buttons side="right">
+    <button ng-class="{'button button-icon ion-loop': isOnlineLoggedIn(), 'button button-icon ion-alert-circled': !isOnlineLoggedIn()}"
+            ng-click="sync()">
+    </button>
     <button class="button button-icon ion-trash-b" ng-click="clearAllSpots()"></button>
     <button class="button button-icon ion-plus" ng-click="newSpot()"></button>
   </ion-nav-buttons>
