--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -3,7 +3,7 @@
       <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
     <ion-nav-buttons side="right">
-      <button ng-click="getLocation()" class="button button-icon icon ion-pinpoint"></button>
+      <button ng-click="toggleLocation()" ng-class="{'button button-icon icon ion-pinpoint': !locationOn, 'button button-icon icon ion-android-locate': locationOn}"></button>
       <button ng-click="showActionsheet()" class="button button-icon icon ion-grid"></button>
       <div ng-class="{'online': isOnline(), 'offline': !isOnline()}"></div>
     </ion-nav-buttons>
