--- a/www/css/style.css
+++ b/www/css/style.css
@@ -246,3 +246,39 @@ Style fields for input errors and no-errors
 .no-errors {
   border-bottom: 3px solid green;
 }
+
+/*--------------------
+Login Page
+--------------------*/
+.login {
+  background: url(../img/background.jpg) no-repeat center center fixed;;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.logintext{
+  text-align: center;
+  font-weight: 900;
+  font-family: 'Open Sans Condensed', sans-serif;
+  padding-top: 20px;
+}
+
+.scroll {
+  min-height: 100%;
+  height: 100%;
+}
+
+button.skip {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+.create-account-text{
+  font-weight: bold;
+  color: #000;
+  text-transform: uppercase;
+  text-shadow: 0 0 6px #FFF;
+}
