added background login image to git

--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -4,7 +4,7 @@
     </ion-nav-buttons>
     <ion-nav-buttons side="right">
       <button ng-click="toggleLocation()" ng-class="{'button button-icon icon ion-pinpoint': !locationOn, 'button button-icon icon ion-android-locate': locationOn}"></button>
-      <button ng-click="showActionsheet()" class="button button-icon icon ion-grid"></button>
+      <button ng-click="showActionsheet()" class="button button-icon icon ion-arrow-up-b"></button>
       <div ng-class="{'online': isOnline(), 'offline': !isOnline()}"></div>
     </ion-nav-buttons>
     <ion-pane data-tap-disabled="true">
