upload new background image

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -251,7 +251,7 @@ Style fields for input errors and no-errors
 Login Page
 --------------------*/
 .login {
-  background: url(../img/PetrifiedForestNP6-8-06.jpg) no-repeat center center fixed;;
+  background: url(../img/background.jpg) no-repeat center center fixed;;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
