--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -20,6 +20,7 @@
           </a>
         </div>
       </div>
+      <span class="caption">Petrified Forest National Park</span>
       <button class="button icon-left button-positive button-small ion-forward pull-right skip" ng-click="skip()">Skip</button>
     </div>
   </ion-content>
