--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -2,7 +2,7 @@
   <ion-content>
     <div class="login scroll" align="center">
       <div class="logininset">
-        <h1 class="logintext">Strabo Mobile</h1>
+        <h1 class="logintext">strabo</h1>
         <div class="list list-inset">
           <label class="item item-input logininput">
             <input type="text" placeholder="Username" ng-model="loginData.email">
