--- a/www/templates/spots.html
+++ b/www/templates/spots.html
@@ -11,7 +11,7 @@
   </ion-nav-buttons>
     <ion-content class="has-header">
       <ion-list>
-        <ion-item ng-repeat="spot in spots" href="#/app/spots/{{spot.properties.id}}">
+        <ion-item ng-repeat="spot in spots" href="#/app/spots/{{spot.properties.id}}/details">
           {{spot.properties.name}} <small>({{spot.properties.type}})</small>
         </ion-item>
       </ion-list>
