--- a/www/templates/archiveTiles.html
+++ b/www/templates/archiveTiles.html
@@ -1,7 +1,10 @@
 <ion-view title="Save Offline Map">
+  <ion-nav-buttons side="left">
+    <button ng-click="goToMap();" class="button button-icon icon ion-arrow-left-c"></button>
+  </ion-nav-buttons>
   <ion-content class="padding has-header">
 
-    <label class="item item-input">
+    <label class="item item-input item-stacked-label item-text-wrap">
       <span class="input-label"><b>Map Name:</b></span>
       <input type="text" ng-model="map.name" autofocus>
     </label>
