--- a/www/templates/tabs/notes.html
+++ b/www/templates/tabs/notes.html
@@ -11,7 +11,7 @@
     <ion-scroll direction="x" class="wide-as-needed">
       <a class="button inline-button button-clear spot-tab-inactive" href="#/app/spots/{{spot.properties.id}}/details">Details</a>
       .
-      <a class="button button-clear button-llight spot-tab-active" href="#/app/spots/{{spot.properties.id}}/notes">Notes</a>
+      <a class="button button-clear button-light spot-tab-active" href="#/app/spots/{{spot.properties.id}}/notes">Notes</a>
       .
       <a class="button button-clear spot-tab-inactive" href="#/app/spots/{{spot.properties.id}}/pictures">Photos</a>
       .
