--- a/www/templates/tabs/rockdescription.html
+++ b/www/templates/tabs/rockdescription.html
@@ -1,37 +1,140 @@
-<ion-view title="Spot Info">
-  <ion-nav-buttons side="left">
-    <button ng-click="goToSpots();" class="button button-icon icon ion-arrow-left-c"></button>
-  </ion-nav-buttons>
-  <ion-nav-buttons side="right">
-    <button ng-click="deleteSpot();" class="button button-icon icon ion-trash-b"></button>
-    <button ng-click="submit();" class="button button-icon icon ion-checkmark-circled"></button>
-  </ion-nav-buttons>
+<form name="rockDescriptionForm" novalidate="">
+  <ion-view title="Spot Info">
+    <ion-nav-buttons side="left">
+      <button ng-click="goToSpots();" class="button button-icon icon ion-arrow-left-c"></button>
+    </ion-nav-buttons>
+    <ion-nav-buttons side="right">
+      <button ng-click="deleteSpot();" class="button button-icon icon ion-trash-b"></button>
+      <button ng-click="submit();" class="button button-icon icon ion-checkmark-circled"></button>
+    </ion-nav-buttons>
 
-  <ion-header-bar class="bar-subheader">
-    <ion-scroll direction="x" class="wide-as-needed">
-      <a class="button inline-button button-clear spot-tab-inactive" href="#/app/spots/{{spot.properties.id}}/details">Details</a>
-      <a class="button button-clear spot-tab-inactive" href="#/app/spots/{{spot.properties.id}}/notes">Notes</a>
-      <a class="button button-clear spot-tab-inactive" href="#/app/spots/{{spot.properties.id}}/pictures">Photos</a>
-      <a class="button button-clear spot-tab-inactive" href="#/app/spots/{{spot.properties.id}}/georeference">Georeference</a>
-      <span ng-show="showLinks">
-        <a class="button button-clear spot-tab-inactive" href="#/app/spots/{{spot.properties.id}}/links">Links</a>
-      </span>
-      <span ng-show="showGroups">
-        <a class="button button-clear spot-tab-inactive" href="#/app/spots/{{spot.properties.id}}/groups">Groups</a>
-      </span>
-      <span ng-show="showGroupMembers">
-        <a class="button button-clear spot-tab-inactive" href="#/app/spots/{{spot.properties.id}}/groupmembers">Group Members</a>
-      </span>
-      <a class="button button-clear button-light spot-tab-active" href="#/app/spots/{{spot.properties.id}}/rockdescription">Rock Description</a>
-      <a class="button button-clear spot-tab-inactive" href="#/app/spots/{{spot.properties.id}}/rocksample">Rock Sample</a>
-    </ion-scroll>
-  </ion-header-bar>
+    <ion-header-bar class="bar-subheader">
+      <ion-scroll direction="x" class="wide-as-needed">
+        <a class="button inline-button button-clear spot-tab-inactive" ng-click="switchTabs('details')">Details</a>
+        <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('notes');">Notes</a>
+        <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('pictures')">Photos</a>
+        <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('georeference')">Georeference</a>
+        <span ng-show="showLinks">
+          <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('links')">Links</a>
+        </span>
+        <span ng-show="showGroups">
+          <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('groups')">Groups</a>
+        </span>
+        <span ng-show="showGroupMembers">
+          <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('groupmembers')">Group Members</a>
+        </span>
+        <a class="button button-clear button-light spot-tab-active" href="#/app/spots/{{spot.properties.id}}/rockdescription">Rock Description</a>
+        <a class="button button-clear spot-tab-inactive" ng-click="switchTabs('rocksample')">Rock Sample</a>
+      </ion-scroll>
+    </ion-header-bar>
 
-  <ion-content>
-    <div class="item item-divider">
-      Rock Description
-    </div>
-    Rock Description form goes here.
-  </ion-content>
+    <ion-content>
+      <div class="item item-divider">
+        Rock Description
+      </div>
+      <div ng-repeat="field in rock_description_survey">
+        <div id="{{ field.name }}" ng-show="showField(field.relevant)">
+          <div data-ng-switch on="field.type.split(' ')[0]">
+            <div ng-switch-when="integer">
+              <label class="item item-input item-stacked-label item-text-wrap"
+                     ng-class="{ 'has-errors' : rockDescriptionForm[field.name].$invalid, 'no-errors' : rockDescriptionForm[field.name].$valid }"
+                     ng-messages-include="templates/error-messages.html">
+                <span class="input-label">{{field.label}}</span>
+                <input type="number"
+                       name="{{ field.name }}"
+                       placeholder="{{ field.hint }}"
+                       ng-model="spot.properties[field.name]"
+                       ng-required="{{ field.required }}"
+                       ng-min="getMin(field.constraint)"
+                       ng-max="getMax(field.constraint)">
+              </label>
+            </div>
+            <div ng-switch-when="decimal">
+              <label class="item item-input item-stacked-label item-text-wrap"
+                     ng-class="{ 'has-errors' : rockDescriptionForm[field.name].$invalid, 'no-errors' : rockDescriptionForm[field.name].$valid }"
+                     ng-messages-include="templates/error-messages.html">
+                <span class="input-label">{{field.label}}</span>
+                <input type="number"
+                       name="{{ field.name }}"
+                       placeholder="{{ field.hint }}"
+                       ng-model="spot.properties[field.name]"
+                       ng-required="{{ field.required }}"
+                       ng-min="getMin(field.constraint)"
+                       ng-max="getMax(field.constraint)">
+              </label>
+            </div>
+            <div ng-switch-when="text">
+              <label class="item item-input item-stacked-label item-text-wrap"
+                     ng-class="{ 'has-errors' : rockDescriptionForm[field.name].$invalid, 'no-errors' : rockDescriptionForm[field.name].$valid }"
+                     ng-messages-include="templates/error-messages.html">
+                <span class="input-label">{{field.label}}</span>
+                <input type="text"
+                       name="{{ field.name }}"
+                       placeholder="{{ field.hint }}"
+                       ng-model="spot.properties[field.name]"
+                       ng-required="{{ field.required }}">
+              </label>
+            </div>
+            <div ng-switch-when="note">
+              <label class="item item-input item-stacked-label item-text-wrap"
+                     ng-class="{ 'has-errors' : rockDescriptionForm[field.name].$invalid, 'no-errors' : rockDescriptionForm[field.name].$valid }"
+                     ng-messages-include="templates/error-messages.html">
+                <span class="input-label">{{ field.label }}</span>
+                        <textarea name="{{ field.name }}"
+                                  rows="4"
+                                  placeholder="{{field.hint}}"
+                                  ng-model="spot.properties[field.name]"
+                                  ng-required="{{ field.required }}">
+                        </textarea>
+              </label>
+            </div>
+            <div ng-switch-when="select_one">
+              <label class="item item-input item-select item-stacked-label item-text-wrap"
+                     ng-class="{ 'has-errors' : rockDescriptionForm[field.name].$invalid, 'no-errors' : rockDescriptionForm[field.name].$valid }">
+                <span class="input-label">{{ field.label }}</span>
+                <span class="item-placeholder"><small>{{ field.hint }}</small></span><br>
+                <select name="{{ field.name }}"
+                        ng-model="spot.properties[field.name]"
+                        ng-options="choice.name as choice.label for choice in rock_description_choices
+                                | orderBy: 'label'
+                                | filter: { 'list name': field.type.split(' ')[1] }"
+                        ng-required="{{ field.required }}">
+                </select>
+              </label>
+            </div>
+            <div ng-switch-when="select_multiple">
+              <label class="item item-stacked-label item-text-wrap" ng-class="setSelMultClass(field)">
+                <span class="input-label">{{field.label}}</span>
+                <span class="item-placeholder"><small>{{ field.hint }}</small></span><br>
+                <ion-checkbox name="{{ field.name }}"
+                              ng-repeat="choice in rock_description_choices | orderBy: 'label' | filter: { 'list name': field.type.split(' ')[1] }"
+                              ng-checked="isOptionChecked(field.name, choice.name)"
+                              ng-click="toggleChecked(field.name, choice.name)"
+                              ng-required="{{ field.required }}">
+                  {{ choice.label }}
+                </ion-checkbox>
+              </label>
+            </div>
+            <div ng-switch-when="acknowledge">
+              <label class="item item-stacked-label item-text-wrap" ng-class="setSelMultClass(field)">
+                <span class="input-label">{{field.label}}</span><br>
+                <span class="item-placeholder"><small>{{ field.hint }}</small></span>
+                <ion-checkbox name="{{ field.name }}"
+                              ng-checked="isAcknowledgeChecked(field.name)"
+                              ng-click="toggleAcknowledgeChecked(field.name)"
+                              ng-required="{{ field.required }}">
+                  Yes
+                </ion-checkbox>
+              </label>
+            </div>
+            <div ng-if="rockDescriptionForm[field.name].$touched"
+                 ng-messages="rockDescriptionForm[field.name].$error"
+                 ng-messages-include="templates/error-messages.html">
+            </div>
+          </div>
+        </div>
+      </div>
+    </ion-content>
 
-</ion-view>
+  </ion-view>
+</form>
